crates/vexor-compiler/tests/golden/error/output/head_empty.err
Error: evaluation error
   ╭─[ input:2:15 ]
   │
 2 │ export Circle(head(Nil))
   │               ────┬────  
   │                   ╰────── head of empty list
───╯
